kube/shop/base/recommendations/randomuser/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: randomuser-serviceentry
  namespace: shop-ns
spec:
  hosts:
    - randomuser.me
  exportTo:
    - "istio-system"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
---
#apiVersion: networking.istio.io/v1beta1
#kind: ServiceEntry
#metadata:
#  name: randomuser-serviceentry-internal
#  namespace: shop-ns
#spec:
#  hosts:
#    - randomuser.me
#  workloadSelector:
#    labels:
#      app: recommendations-app
#  ports:
#    - number: 80
#      name: http
#      protocol: HTTP
#  location: MESH_INTERNAL
